# wgpu-native-installer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.tool.txt  setup.py
.github/workflows/: ci.yml
package/: __init__.py  __main__.py  main.py
package/argument/functions/: public.py
package/argument/objects/: __init__.py  argparser.py  argtype.py
package/common/functions/: private.py  public.py
package/common/objects/: __init__.py  json.py  markdown.py
package/format/functions/: public.py
package/format/objects/: json.py  markdown.py
package/github_release/: meta.py
package/github_release/functions/: public.py
package/github_release/objects/: __init__.py  asset.py  data.py  meta.py
package/unzip/functions/: public.py
package/zip_extract/functions/: public.py
test/: json.py
test/argument/: argtype.py
test/common/: json.py
test/format/: function.py  json.py
test/github_release/: asset.py
