[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "Asher Jingkong Chen"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-re2 == 1.1",
  "httpx == 0.27.0",
  "stream-unzip == 0.0.91",
]
description = "Install wgpu-native"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "wgpu-native-installer"
readme = "README.md"
requires-python = ">= 3"

[project.urls]
Homepage = "https://github.com/AsherJingkongChen/wgpu-native-installer"

[tool.black]
line-length = 80
pyi = true

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [
  "test/**/*.py",
]

[tool.setuptools]
dynamic = {version = {attr = "package.__version__"}}
package-dir = {wgpu_native_installer = "package"}
