[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
authors = [{name = "Asher Jingkong Chen"}]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-re2 == 1.1",
  "httpx[http2] == 0.27.0",
  "stream-unzip == 0.0.91",
  "tqdm == 4.66.4",
]
description = "Install wgpu-native"
dynamic = ["version"]
keywords = ["wgpu", "installer", "cli"]
license = {file = "LICENSE"}
name = "wgpu-native-installer"
readme = "README.md"
requires-python = ">= 3.8"

[project.urls]
Homepage = "https://github.com/AsherJingkongChen/wgpu-native-installer"
Repository = "https://github.com/AsherJingkongChen/wgpu-native-installer.git"

[tool.black]
line-length = 80
pyi = true

[tool.isort]
include_trailing_comma = true
line_length = 80
lines_after_imports = 1
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-s"
testpaths = [
  "test/**/*.py",
]

[tool.setuptools]
dynamic = {version = {attr = "package.__version__"}}
package-dir = {wgpu_native_installer = "package"}
